# EZminc

./: CMakeLists.txt  README  config.h.cmake
build_quarantine/: Makefile
diff_demons/: CMakeLists.txt  DemonsRegistration.cxx  InverseDeformationField.cxx  LogDomainDemonsRegistration.cxx  grid_2_log.cxx  grid_proc.cpp  grid_statistics.cpp  log_resample.cpp  mincUtils.cxx  mincUtils.h
diff_demons/itk/: itkDemonsRegistrationFilterM.h  itkDemonsRegistrationFilterM.txx  itkDemonsRegistrationFunctionM.h  itkDemonsRegistrationFunctionM.txx  itkDiffeomorphicDemonsRegistrationFilterM.h  itkDiffeomorphicDemonsRegistrationFilterM.txx  itkDisplacementFieldCompositionFilter.h  itkDisplacementToVelocityFieldLogFilter.h  itkDisplacementToVelocityFieldLogFilter.txx  itkESMDemonsRegistrationFunctionM.h  itkESMDemonsRegistrationFunctionM.txx  itkFastSymmetricForcesDemonsRegistrationFilterM.h  itkFastSymmetricForcesDemonsRegistrationFilterM.txx  itkLogDomainDeformableRegistrationFilter.h  itkLogDomainDeformableRegistrationFilter.txx  itkLogDomainDemonsRegistrationFilter.h  itkLogDomainDemonsRegistrationFilter.txx  itkMultiResolutionLogDomainDeformableRegistration.h  itkMultiResolutionLogDomainDeformableRegistration.txx  itkMultiResolutionPDEDeformableRegistrationM.h  itkMultiResolutionPDEDeformableRegistrationM.txx  itkNCCRegistrationFunction2.txx  itkOppositeImageFilter.h  itkPDEDeformableRegistrationFilterM.h  itkPDEDeformableRegistrationFilterM.txx  itkPDEDeformableRegistrationFunctionM.h  itkSymmetricLogDomainDemonsRegistrationFilter.h  itkSymmetricLogDomainDemonsRegistrationFilter.txx  itkTransformToVelocityFieldSource.h  itkTransformToVelocityFieldSource.txx  itkVelocityFieldBCHCompositionFilter.h  itkVelocityFieldExponentialComposedWithDisplacementFieldFilter.h  itkVelocityFieldExponentialComposedWithDisplacementFieldFilter.txx  itkVelocityFieldLieBracketFilter.h  itkVelocityFieldLieBracketFilter.txx  vnl_sd_matrix_tools.txx
diff_demons/minc/: mincVectorBSplineInterpolate.h  mincVectorBSplineInterpolate.hxx  mincVectorHarmonicEnergyFilter.h  mincVectorHarmonicEnergyFilter.hxx
distortion_correction/: CMakeLists.txt  adni_preprocess.pl  assemble_bricks.pl  c_fit_harmonics_grids.cpp  c_param2grid.cpp  calc_distortions.pl  data_proc.h  duplo_brick_build.sh  fit_harmonics_grids.cpp  fit_harmonics_grids_diff.cpp  fit_harmonics_grids_regularize.cpp  itk_assemble_bricks.cpp  itk_label_stats.cpp  lego_build.sh  lego_core_extract.pl  mincMeanSquaresImageToImageMetric.h  mincMeanSquaresImageToImageMetric.txx  par2xfm.pl  param2grid.cpp  phantom_distortion_measure.pl  phantom_distortion_measure_v2.pl  phantomfit.pl  phantomfit_ANTS.pl  phantomfit_DD.pl  phantomfit_elastix.pl  phantomfit_elastix_exp.pl  sph_par2grid.cpp  sphericalHarmonicsTransform.cpp  sphericalHarmonicsTransform.h
examples/: CMakeLists.txt  fuzzy_volume_similarity.cpp  itk_dti.cpp  itk_resample.cpp  object_intersect.cpp  trilinear_resample.cpp  volume_2_csv.cpp  volume_avg.cpp  volume_moments.cpp  volume_msq_dist.cpp  volume_similarity.cpp
image_proc/: CMakeLists.txt  dwt.cpp  dwt_utils.cpp  dwt_utils.h  fftw_blur.cpp  fftw_blur.h  gsl_gauss.h  gsl_glue.h  gsl_nlfit.cpp  gsl_nlfit.h  itk4MincHelpers.cxx  itk4MincHelpers.h  minc_histograms.cpp  minc_histograms.h  minc_wrappers.h  noise_estimate.cpp  noise_estimate.h  sharpness_estimate.cpp  sharpness_estimate.h  volume_dwt.cpp  volume_dwt.h
minc4itk/: itkMincImageIO.cxx  minc_general_transform.h  minc_helpers.cxx  (+1 more)
mincnlm/: CMakeLists.txt  Doxyfile  minc_anlm.cpp  mincnlm.cpp  nl_means.cpp  nl_means.h  nl_means_block.cpp  nl_means_block.h  nl_means_fft.cpp  nl_means_utils.cpp  nl_means_utils.h
mrfseg/: CMakeLists.txt  atlasspec.cpp  atlasspec.h  atlastest.cpp  classify_skull.pl  classify_t2_brain.pl  classify_t2_csf.pl  classify_with_skull.pl  erodemask.cpp  gamixture.cpp  gamixture.h  gamixturemain.cpp  generic_image.cpp  generic_image.h  image_lowres_spec_prob.txt  image_lowres_spec_prob_skull.txt  image_lowres_spec_prob_skull2.txt  image_lowres_spec_prob_t2.txt  image_lowres_spec_prob_t2_2class.txt  image_lowres_spec_prob_t2_2class_bbg.txt  image_lowres_spec_prob_t2_nocsf.txt  knnfilt.cpp  medfilt3D.cpp  minc_generic_image.cpp  minc_generic_image.h  mrfseg.cpp  mrfseg.pl  nhmrf.cpp  nhmrf.h  parzen.cpp  parzen.h  relabel_analyze.cpp  showatlasspecs.cpp
mrfseg/atlasspecs/: icbm_image_spec_prob.txt  image_lowres_nopve_spec_prob.txt  mouseatlas_prob.txt
scripts/: CMakeLists.txt  bestlinreg_s  bestlinreg_s2  deface_minipipe.pl  deface_volume.pl  lobe_segment.pl  lobes_to_volumes.pl  make_face.pl  make_random_grid.pl  minc_aqc.pl  minc_pretty_pic.pl  minc_pretty_pic_m.pl  minc_qc.pl  minc_qc2.pl  minc_qc_rgb.pl  minc_qc_t2t1.pl  nlfit_f  nlfit_l  nlfit_s  uniformize_minc.pl  xfm_normalize.pl  xfmavg
tests/: CMakeLists.txt  any_itk_any.cpp  any_itk_any_4d.cpp  any_itk_any_u32.cpp  itk_transform_to_xfm.cpp  minc_io_test_anat.cpp  minc_io_test_coordinates.cpp  minc_io_test_coordinates2.cpp  minc_io_test_dti.cpp  minc_io_test_grid.cpp  tags_rw_test.cpp  transformpoint.cpp  xfm_to_itk_transform.cpp
tests/data/: tags_r0.txt  tags_r30.txt  test_coordinate2.mnc  test_coordinate2_r30.mnc
tools/: CMakeLists.txt  bestlinreg_s  bestlinreg_scale  deface_minipipe.pl  deface_volume.pl  dircos_to_xfm.cpp  em_classify.cpp  fast_blur.cpp  fdr_threshold.cpp  fuzzy_volume_similarity.cpp  grid_proc.cpp  grids_pca.cpp  histograms.h  icc_mask.pl  itk_convert.cpp  itk_convert_xfm.cpp  itk_diffusion.cpp  itk_distance.cpp  itk_fill_hole.cpp  itk_g_morph.cpp  itk_laplace.cpp  itk_laplacian_sharpening.cpp  itk_morph.cpp  itk_resample.cpp  itk_similarity.cpp  itk_vesselness.cpp  make_random_grid.pl  mincVariableVectorBSplineInterpolate.h  mincVariableVectorBSplineInterpolate.txx  mincVariableVectorInterpolateImageFunction.h  mincVariableVectorResampleImageFilter.h  mincVariableVectorResampleImageFilter.txx  mincVectorBSplineInterpolate.h  mincVectorBSplineInterpolate.txx  minc_downsample.cpp  minc_nuyl.cpp  minc_rank.cpp  minc_taylor_reg.c  minc_wrappers.h  multiple_volume_similarity.cpp  (+23 more)
(+6 files in other folders)
