PROJECT (ezminc)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")

FIND_PACKAGE( MINC2 REQUIRED )
INCLUDE( ${MINC2_USE_FILE} )


#OPTION(BUILD_TESTS    "Build tests" OFF)
#OPTION(BUILD_EXAMPLES "Build Examples" OFF)
OPTION(BUILD_MINCNLM  "Build Non-local means denoising programm,requires GSL (protected by a license IDDN.FR.001.070033.000.S.P.2007.000.21000)" OFF)
OPTION(BUILD_DISTORTION_CORRECTION "Build distortion correction tools, requires GSL" OFF)

FIND_PACKAGE(GSL)
FIND_PACKAGE(FFTW3F)

IF(USE_ITK_HDF5) # have to use HDF5 and Zlib from ITK
  FIND_PACKAGE(ITK REQUIRED)
  LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})
ELSE(USE_ITK_HDF5)
  FIND_PACKAGE(ITK)
ENDIF(USE_ITK_HDF5)

IF(ITK_FOUND)
  OPTION(BUILD_TOOLS "Build additional tools (defacing) requires GSL" OFF)
ENDIF(ITK_FOUND)


INCLUDE_DIRECTORIES( image_proc )

IF(GSL_FOUND)
  INCLUDE_DIRECTORIES( 
    ${GSL_INCLUDE_DIRS}
    tools
  )

  IF(BUILD_MINCNLM)
    ADD_SUBDIRECTORY(mincnlm)
  ENDIF(BUILD_MINCNLM)

ENDIF(GSL_FOUND)

IF(FFTW3F_FOUND)

  INCLUDE_DIRECTORIES( 
   ${FFTW3F_INCLUDE_DIRS}
  )
ENDIF(FFTW3F_FOUND)


#ADD_SUBDIRECTORY( minc_io )
ADD_SUBDIRECTORY( image_proc )



# IF(BUILD_EXAMPLES)
#   ADD_SUBDIRECTORY(examples)
# ENDIF(BUILD_EXAMPLES)
# 
# IF(BUILD_TESTS)
#   ADD_SUBDIRECTORY(tests)
# ENDIF(BUILD_TESTS)

IF(BUILD_TOOLS )
  ADD_SUBDIRECTORY(tools)
ENDIF(BUILD_TOOLS)

IF(GSL_FOUND AND BUILD_DISTORTION_CORRECTION)
  ADD_SUBDIRECTORY( distortion_correction )
ENDIF(GSL_FOUND AND BUILD_DISTORTION_CORRECTION)
