# CMakeFiles.txt for the EZminc
#
# Vladimir S. FONOV - vladimir.fonov@gmail.com

PROJECT(ezminc)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT MINC_TOOLKIT_BUILD)
  SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
  
  FIND_PACKAGE(MINC2 REQUIRED)
  FIND_PACKAGE(GSL)
  FIND_PACKAGE(FFTW3F)

  IF(USE_ITK_HDF5) # have to use HDF5 and Zlib from ITK
    FIND_PACKAGE(ITK REQUIRED)
    LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})
  ELSE(USE_ITK_HDF5)
    FIND_PACKAGE(ITK)
  ENDIF(USE_ITK_HDF5)
  
  INCLUDE( ${MINC2_USE_FILE} )
  
  OPTION(EZMINC_BUILD_MINCNLM  "Build Non-local means denoising programm,requires GSL (protected by a license IDDN.FR.001.070033.000.S.P.2007.000.21000)" OFF)
  OPTION(EZMINC_BUILD_DISTORTION_CORRECTION "Build distortion correction tools, requires GSL" OFF)
  OPTION(EZMINC_BUILD_MRFSEG   "Build mrfseg - tissue classification program from Jussi Tohka" OFF)
  OPTION(EZMINC_BUILD_DD       "Build Diffeomorphic Demons (requires ITK)" OFF)
  OPTION(EZMINC_BUILD_TOOLS "Build additional tools , requires GSL" OFF)
  
ENDIF(NOT MINC_TOOLKIT_BUILD)


INCLUDE_DIRECTORIES( image_proc )
ADD_SUBDIRECTORY( image_proc )

IF(GSL_FOUND)

  INCLUDE_DIRECTORIES( 
    ${GSL_INCLUDE_DIRS}
    tools
  )

  IF(EZMINC_BUILD_MINCNLM)
    ADD_SUBDIRECTORY(mincnlm)
  ENDIF(EZMINC_BUILD_MINCNLM)
ENDIF(GSL_FOUND)

IF(FFTW3F_FOUND)
  INCLUDE_DIRECTORIES( ${FFTW3F_INCLUDE_DIRS})
ENDIF(FFTW3F_FOUND)

IF(EZMINC_BUILD_TOOLS )
  ADD_SUBDIRECTORY(tools)
ENDIF(EZMINC_BUILD_TOOLS)

IF(GSL_FOUND AND EZMINC_BUILD_DISTORTION_CORRECTION)
  ADD_SUBDIRECTORY( distortion_correction )
ENDIF(GSL_FOUND AND EZMINC_BUILD_DISTORTION_CORRECTION)

IF(EZMINC_BUILD_MRFSEG)
  ADD_SUBDIRECTORY(mrfseg)
ENDIF(EZMINC_BUILD_MRFSEG)

IF(ITK_FOUND)
  IF(EZMINC_BUILD_DD)
    ADD_SUBDIRECTORY(diff_demons)
  ENDIF(EZMINC_BUILD_DD)
ENDIF(ITK_FOUND)
