IF(ITK_FOUND)

  INCLUDE_DIRECTORIES(${ITK_INCLUDE_DIRS} )  
  LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})
  
  IF(HAVE_MINC4ITK)
    INCLUDE_DIRECTORIES( ${MINC4ITK_INCLUDE_DIRS})  
    LINK_DIRECTORIES( ${MINC4ITK_LIBRARY_DIRS})
    SET(ITK_LIBRARIES ITKIOMINC ${ITK_LIBRARIES})
  ELSE(HAVE_MINC4ITK)
    SET(ITK_LIBRARIES itk4MincHelpers ${ITK_LIBRARIES})
  ENDIF(HAVE_MINC4ITK)
  
  ADD_EXECUTABLE( volume_2_csv volume_2_csv.cpp)
  TARGET_LINK_LIBRARIES( volume_2_csv   ${ITK_LIBRARIES})

  ADD_EXECUTABLE( volume_moments 
                  volume_moments.cpp )
  TARGET_LINK_LIBRARIES( volume_moments  ${ITK_LIBRARIES})

  ADD_EXECUTABLE( itk_dti 
                  itk_dti.cpp )
  TARGET_LINK_LIBRARIES( itk_dti ${ITK_LIBRARIES})
  
  IF(BICPL_FOUND)
    INCLUDE_DIRECTORIES(${BICPL_INCLUDE_DIRS})  
    LINK_DIRECTORIES( ${BICPL_LIBRARY_DIRS} )
    
    ADD_EXECUTABLE( object_intersect object_intersect.cpp )
    TARGET_LINK_LIBRARIES( object_intersect ${BICPL_LIBRARIES} ${ITK_LIBRARIES})
  ENDIF(BICPL_FOUND)
        
ENDIF(ITK_FOUND)
