
INSTALL(PROGRAMS 
        make_face.pl
        volume_denoise.pl
        deface_minipipe.pl
        make_random_grid.pl
        deface_volume.pl
        nlfit_s nlfit_l
        bestlinreg.pl 
        bestlinreg_s 
        bestlinreg_s2 
        icc_mask.pl
        uniformize_minc.pl
        xfm_normalize.pl
        xfmavg
        lobe_segment.pl
        lobes_to_volumes.pl
        DESTINATION bin )
